完善Todo的标签编辑

--- a/web_app/src/components/Todo.css
+++ b/web_app/src/components/Todo.css
@@ -16,4 +16,13 @@
 
 .Todo-tag {
   margin: 0 2vmin;
+  display: flex;
+}
+
+.Todo-tag-edit {
+  margin: 0 2vmin;
+  padding: 2vmin;
+  display: flex;
+  border: 1px solid #282c34;
+  border-radius: 8px;
 }
